tests/Rules/Structure/Fixtures/valid/p_normal_paragraph.html.twig
<p>This is a normal paragraph without special styling.</p>
<p style="color: red;">This paragraph has color but is not a fake heading.</p>
