tests/Rules/Structure/Fixtures/invalid/p_as_heading_large_font.html.twig
{# 1 errors #}
<p style="font-size: 2em;">This looks like a heading but is a paragraph.</p>
<p>Regular content.</p>
